# PMP7

./: .gitignore  CMakeLists.txt  DBusMprisProxy.cpp  DBusMprisProxy.h  DBusPODProxy.cpp  DBusPODProxy.h  README.md  globals.h  main.cpp  mpris_proxy.hpp  pod_proxy.hpp  pod_proxy.xml
Resources/Lokalize/: 0_getstrings.sh  2_makemo.sh  index.lokalize
Resources/Lokalize/fr/: PMP7.po
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
